# Lights

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  docker-compose.yml
cli_tool/: CMakeLists.txt  graph_exercise.cpp  graph_exercise.h  main.cpp  node.cpp  node.h
client/: CMakeLists.txt  main.cpp
client/assets/map/: test_map.tmj
client/assets/shaders/: basic.frag  basic.vert  debug.frag  font.frag  font.vert  sprite.frag  sprite.vert
client/assets/shaders/text/: font.frag  font.vert  input_rectangle.frag  input_rectangle.vert
client/game/: application_state.h  callback_functions.h  client_game.cpp  client_game.h
client/game/abilities/: ability.h  ability_system_component.cpp  ability_system_component.h
client/game/abilities/ability/: jump_ability.cpp  jump_ability.h
client/game/objects/: pepe.cpp  pepe.h  sprite.cpp  sprite.h  tilemap.cpp  tilemap.h
client/game/objects/input/: button.cpp  button.h  text_input.cpp  text_input.h
client/game/objects/player/: player.cpp  player.h
client/game/objects/text/: text_input.cpp  text_input.h  text_label.cpp  text_label.h
client/game/rendering/: buffer.cpp  buffer.h  material.cpp  render_pass.cpp  render_pass.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shapes.h  texture.cpp  vertex.h
client/game/scene/: constants.h  scene.h  units.h
client/game/scene/base_scene/: base_scene.cpp  base_scene.h
client/game/scene/main_menu/: main_menu_scene.cpp  main_menu_scene.h
client/game/scenes/ingame/: base_scene.cpp  base_scene.h
client/game/scenes/mmo/: mmo_scene.cpp  mmo_scene.h
client/game/scenes/physics_testing/: physics_testing_scene.cpp  physics_testing_scene.h
client/game/ui/: debug_window.cpp  debug_window.h
client/game/utils/: mouse_utils.h
client/network/: client.cpp  client.h
engine/: CMakeLists.txt
engine/include/lights/: lights.h
engine/include/lights/audio/: audio_cue.h  audio_graph.h  audio_params.h  audio_submix.h  audio_subsystem.h
engine/include/lights/game/: anchors.h  game.h  game_object.h  game_world.h  tiled_map.h
engine/include/lights/input/: input_keys.h  input_subsystem.h
engine/include/lights/network/: messages.h
engine/include/lights/platform/: platform_window.h  window.h
engine/include/lights/rendering/: buffer.h  material.h  render_target.h  renderable.h  renderer.h  shader.h  shapes.h  texture.h  vertex.h
engine/include/lights/scene/: resource_manager.h  scene.h  scene_layer.h  scene_layer_manager.h  scene_object.h
engine/include/lights/text/: font_loader.h
engine/include/lights/util/: bytes.h  configuration.h  enums.h  image.h  memory_literals.h  mouse_utils.h  ring_buffer.h  state_machine.h  strings.h
engine/src/algo/: graph_node.cpp
engine/src/audio/: audio_cue.cpp  audio_graph.cpp  audio_submix.cpp  audio_subsystem.cpp
engine/src/audio/nodes/: audio_cue.cpp  audio_fan_in_mixer_node.cpp  saw_tooth_node.cpp
engine/src/core/algo/: graph_node.cpp
engine/src/core/audio/: audio_graph.cpp  audio_subsystem.cpp
engine/src/core/platform/: window.cpp
engine/src/core/rendering/: buffer.cpp  material.cpp  render_target.cpp  renderable.cpp  renderer.cpp  shader.cpp  texture.cpp
engine/src/core/text/: font_loader.cpp
engine/src/core/util/: image.cpp  ring_buffer.cpp
engine/src/framework/input/: input_keys.cpp  input_subsystem.cpp
engine/src/framework/scene/: resource_manager.cpp  scene.cpp  scene_layer.cpp  scene_layer_manager.cpp
engine/src/game/: game_object.cpp  game_world.cpp
engine/src/game/2D/: sprite.cpp
engine/src/input/: input_keys.cpp  input_subsystem.cpp
engine/src/platform/: window.cpp
engine/src/platform/GLFW/: glfw_window.cpp
engine/src/platform/SDL3/: sdl_keys.cpp  sdl_window.cpp  sdl_window.h
engine/src/rendering/: buffer.cpp  material.cpp  render_target.cpp  renderable.cpp  renderer.cpp  shader.cpp  texture.cpp
engine/src/rendering/renderables/: renderable_viewport.cpp
engine/src/scene/: resource_manager.cpp  scene.cpp  scene_layer_manager.cpp
engine/src/text/: font_loader.cpp
engine/src/util/: image.cpp  ring_buffer.cpp
libs/ozz_audio/: CMakeLists.txt
libs/ozz_audio/include/ozz_audio/: audio.h
libs/ozz_audio/src/: audio.cpp
libs/ozz_binarypacking/: CMakeLists.txt
libs/ozz_binarypacking/include/: ozz_binarypacking.h
libs/ozz_binarypacking/include/ozz_binary/: binary.h  serializable.h
libs/ozz_binarypacking/tests/: CMakeLists.txt  empty.cpp  integer_tests.cpp  string_tests.cpp
libs/ozz_collision/: ATTRIBUTIONS.md  CMakeLists.txt
libs/ozz_collision/include/ozz_collision/: ozz_collision_projection.h  ozz_collision_raycast.h  ozz_collision_result.h  ozz_collision_shapes.h  world.h
libs/ozz_collision/src/: world.cpp
libs/ozz_collision/tests/: CMakeLists.txt  circle_collision.cpp  line_collision.cpp  point_collision.cpp  polygon_collision.cpp  projection_tests.cpp  raycast_tests.cpp  rectangle_collision.cpp
libs/ozz_typegen/src/: CMakeLists.txt  generator.cpp  generator.h  generator_utils.h  main.cpp
libs/ozz_typegen/tests/: CMakeLists.txt
mod_client/: CMakeLists.txt  client.cpp  main.cpp
mod_client/game/: client_game.cpp
mod_client/game/rendering/: renderer.cpp  renderer.h
mod_client/network/: client.cpp
server/: CMakeLists.txt  main.cpp
server/database/: database.cpp  database.h
server/game/: game.cpp  game.h  player.cpp  player.h  server_game.cpp  server_game.h  server_player.cpp  server_player.h
server/network/: connected_client.cpp  connected_client.h  server.cpp  server.h
shared/: CMakeLists.txt
shared/include/lights/: lights.h
shared/src/: fake.cpp
shared/src/collision/: collision_system.cpp
shared/src/game/: game_object.cpp  game_world.cpp  tiled_map.cpp  world.cpp
shared/src/input/: glfw_keys.cpp  input_keys.cpp  input_subsystem.cpp
shared/src/platform/: window.cpp
shared/src/rendering/: buffer.cpp  material.cpp  render_pass.cpp  renderer.cpp  shader.cpp  texture.cpp
shared/src/scene/: scene_layer_manager.cpp
shared/src/text/: font_loader.cpp
shared/src/ui/: user_interface.cpp
shared/src/util/: image.cpp
(+195 files in other folders)
